force-app/main/default/objects/Company__c/fields/Employee_Max_Salary__c.field-meta.xml
<CustomField>
    <fullName>Employee_Max_Salary__c</fullName>
    <label>Employee Max Salary</label>
    <summarizedField>Employee__c.Salary__c</summarizedField>
    <summaryForeignKey>Employee__c.Company__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>