force-app/main/default/objects/Company__c/fields/Employee_Min_Salary__c.field-meta.xml
<CustomField>
    <fullName>Employee_Min_Salary__c</fullName>
    <label>Employee Min Salary</label>
    <summarizedField>Employee__c.Salary__c</summarizedField>
    <summaryForeignKey>Employee__c.Company__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>